JS updates + fix category alignment + fix admin tab list +

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,7 @@ dataset {
 
 .homepage-categories .thumbnail img {
   height: 80px;
+  margin: auto;
 }
 
 .homepage-categories a {
